[tool.poetry]
name = "DI2E-CDKTF"
version = "1.0.0"
description = ""
authors = []
packages = []

[tool.poetry.dependencies]
python = "^3.6"
cdktf = "^0.7.0"
cdktf-cdktf-provider-aws = "^2.0.12"
boto3 = "^1.18.63"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
